--- a/client/src/App.css
+++ b/client/src/App.css
@@ -96,3 +96,23 @@ img {
   border-radius: 10px;
   background-size: cover;
 }
+
+.no-p-margin {
+  margin: 0;
+}
+
+.space {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.comment-column {
+  flex: 0 1 100%;
+  width: 70vw;
+  margin-top: 10px;
+}
+
+.container {
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
